@@ -1,3 +1,6 @@
+2005-02-17 Ian Rutt
+ * Tidied up GLINT pdd scheme and added config file handling
+
 2005-02-16 Ian Rutt
  * First stage of making sure GLINT does what it should. Build
    successfully, but as yet untested.
